--- a/7 ANGULAR/EFictiShopAngularSPA/src/app/app.component.html
+++ b/7 ANGULAR/EFictiShopAngularSPA/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>Welcome to EFShop</h1>
+<h1>Welcome to {{title}}</h1>
+<div *ngFor="let employee of employees">
+   {{employee.id}}
+   {{employee.name}}
+   {{employee.salary}}
+</div>
