--- a/7 ANGULAR/EFictiShopAngularSPA/src/app/add-emp/add-emp.component.html
+++ b/7 ANGULAR/EFictiShopAngularSPA/src/app/add-emp/add-emp.component.html
@@ -1,6 +1,6 @@
 <h1>Add Employee Details Form</h1>
 
-<form [formGroup]="addEmpForm">
+<form [formGroup]="addForm">
    Employee Id : 
    <input type="number" formControlName="id" >
    Name : 
@@ -8,4 +8,3 @@
    Salary : 
    <input type="number" formControlName="salary" >
 </form>
-```
