--- a/7 ANGULAR/EFictiShopAngularSPA/src/app/app.component.html
+++ b/7 ANGULAR/EFictiShopAngularSPA/src/app/app.component.html
@@ -1,8 +1,9 @@
-<h1>Welcome to {{title}}</h1>
-<div *ngFor="let employee of employees">
+<h1> {{title}}</h1>
+<router-outlet></router-outlet>
+<!-- <div *ngFor="let employee of employees">
    {{employee.id}}
    {{employee.name}}
    {{employee.salary}}
-</div>
+</div> -->
 <!-- child component -->
-<app-add-emp></app-add-emp>
+<!-- <app-add-emp></app-add-emp> -->
