--- a/7 ANGULAR/EFictiShopAngularSPA/src/app/app.component.html
+++ b/7 ANGULAR/EFictiShopAngularSPA/src/app/app.component.html
@@ -1,5 +1,8 @@
-<h1> {{title}}</h1>
+<div class="container">
+   <br><br>
+<h3> {{title}}</h3>
 <router-outlet></router-outlet>
+</div>
 <!-- <div *ngFor="let employee of employees">
    {{employee.id}}
    {{employee.name}}
