--- a/7 ANGULAR/EFictiShopAngularSPA/src/app/list-emp/list-emp.component.html
+++ b/7 ANGULAR/EFictiShopAngularSPA/src/app/list-emp/list-emp.component.html
@@ -1,5 +1,33 @@
-<div *ngFor="let employee of employees">
+<br><br>
+<div class="container">
+ 
+   <!-- event / actions like mouse click / (click) event binding -->
+   <button (click)="addEmp()" class="btn btn-info">Add Employee</button>
+   <br><br>
+   <h4>Employee Details</h4>
+   <div>
+      <div  class="table-striped" style="width:500px">
+         <table class="table">
+            <thead>
+               <tr>
+                  <th>Id</th>
+                  <th>Name</th>
+                  <th>Salary</th>
+               </tr>
+            </thead>
+            <tbody>
+               <tr *ngFor="let employee of employees">
+                  <td> {{employee.id}}</td>
+                  <td>{{employee.name}}</td>
+                  <td> {{employee.salary}}</td>
+               </tr>
+            </tbody>
+         </table>
+      </div>   
+   </div>
+</div>
+<!-- <div *ngFor="let employee of employees">
    {{employee.id}}
    {{employee.name}}
    {{employee.salary}}
-</div>
+</div> -->
