--- a/7 ANGULAR/EFictiShopAngularSPA/src/app/add-emp/add-emp.component.html
+++ b/7 ANGULAR/EFictiShopAngularSPA/src/app/add-emp/add-emp.component.html
@@ -1,10 +1,12 @@
-<h1>Add Employee Details Form</h1>
-
+<br>
+<h4>Add Employee Details Form</h4>
+<br>
 <form [formGroup]="addForm">
    Employee Id : 
-   <input type="number" formControlName="id" >
-   Name : 
-   <input type="number" formControlName="name" >
-   Salary : 
-   <input type="number" formControlName="salary" >
+   <input type="text" formControlName="id" ><br><br>
+   Name : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <input type="text" formControlName="name" ><br><br>
+   Salary : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <input type="text" formControlName="salary" ><br><br>
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button class="btn btn-success" (click)="onSubmit()">Save</button>
 </form>
