--- a/7 ANGULAR/EFictiShopAngularSPA/src/app/add-emp/add-emp.component.html
+++ b/7 ANGULAR/EFictiShopAngularSPA/src/app/add-emp/add-emp.component.html
@@ -2,8 +2,8 @@
 <h4>Add Employee Details Form</h4>
 <br>
 <form [formGroup]="addForm">
-   Employee Id : 
-   <input type="text" formControlName="id" ><br><br>
+   <!-- Employee Id :  -->
+   <input type="hidden" formControlName="id" ><br><br>
    Name : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    <input type="text" formControlName="name" ><br><br>
    Salary : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
