--- a/7 ANGULAR/EFictiShopAngularSPA/src/app/list-emp/list-emp.component.html
+++ b/7 ANGULAR/EFictiShopAngularSPA/src/app/list-emp/list-emp.component.html
@@ -20,6 +20,7 @@
                   <td> {{employee.id}}</td>
                   <td>{{employee.name}}</td>
                   <td> {{employee.salary}}</td>
+                  <td><button class="btn btn-danger" (click)="deleteEmp(employee)">Delete</button></td>
                </tr>
             </tbody>
          </table>
