--- a/7 ANGULAR/EFictiShopAngularSPA/src/app/login/login.component.html
+++ b/7 ANGULAR/EFictiShopAngularSPA/src/app/login/login.component.html
@@ -9,6 +9,7 @@
   
    Password : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    <input type="password" formControlName="password" ><br><br>
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button class="btn btn-success" (click)="onSubmit()">Login</button>
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+   <button class="btn btn-success" (click)="onSubmit()">Login</button>
 </form>
 </div>
